# GildedRose-Refactoring-Kata

cpp/: .gitignore  CMakeLists.txt
cpp/src/: CMakeLists.txt
cpp/test/: CMakeLists.txt
cpp/test/cpp_catch2_unittest/: CMakeLists.txt  GildedRoseCatch2UnitTests.cc
cpp/test/cpp_texttest/: CMakeLists.txt  GildedRoseTextTests.cc
